--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="page">
   <div class="page__container">
-    <header class="header header__line">
+    <header class="header">
       <img class="header__logo" src="./images/logo.svg" alt="Логотип Место">
     </header>
     <main class="content">
