--- a/index.html
+++ b/index.html
@@ -17,71 +17,71 @@
         <div class="profile__info">
           <div class="profile__fullname">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
-            <button class="profile__edit"></button>
+            <button class="profile__edit" aria-label="Редактировать профиль" type="button"></button>
           </div>
           <p class="profile__description">Исследователь океана</p>
         </div>
-        <button class="profile__add"></button>
+        <button class="profile__add" type="button" aria-label="Добавить карточку"></button>
       </section>
       <section class="cards">
         <article class="card">
           <img class="card__image" src="./images/Karachaevsk.jpg" alt="Карачаевск">
           <div class="card__inscription">
             <h2 class="card__title">Карачаевск</h2>
-            <button class="card__like"></button>
+            <button class="card__like" type="button" aria-label="Поставить лайк"></button>
           </div>
         </article>
         <article class="card">
           <img class="card__image" src="./images/Elbrus.jpg" alt="Вид на гору Эльбрус">
           <div class="card__inscription">
             <h2 class="card__title">Гора Эльбрус</h2>
-            <button class="card__like"></button>
+            <button class="card__like" type="button" aria-label="Поставить лайк"></button>
           </div>
         </article>
         <article class="card">
           <img class="card__image" src="./images/Dombay.jpg" alt="Фотография гор">
           <div class="card__inscription">
             <h2 class="card__title">Домбай</h2>
-            <button class="card__like"></button>
+            <button class="card__like" type="button" aria-label="Поставить лайк"></button>
           </div>
         </article>
         <article class="card">
           <img class="card__image" src="./images/Altai.jpg" alt="Фотография леса и гор">
           <div class="card__inscription">
             <h2 class="card__title">Алтай</h2>
-            <button class="card__like"></button>
+            <button class="card__like" type="button" aria-label="Поставить лайк"></button>
           </div>
         </article>
         <article class="card">
           <img class="card__image" src="./images/Baikal.jpg" alt="Вид на озеро Байкал">
           <div class="card__inscription">
             <h2 class="card__title">Озеро Байкал</h2>
-            <button class="card__like"></button>
+            <button class="card__like" type="button" aria-label="Поставить лайк"></button>
           </div>
         </article>
         <article class="card">
           <img class="card__image" src="./images/Crimea.jpg" alt="Фотографии постройки в Крыму">
           <div class="card__inscription">
             <h2 class="card__title">Крым</h2>
-            <button class="card__like"></button>
+            <button class="card__like" type="button" aria-label="Поставить лайк"></button>
           </div>
         </article>
       </section>
     </main>
     <footer class="footer">
-      <h3 class="footer__text">&copy; 2020 Mesto Russia</h3>
+      <p class="footer__text">&copy; 2020 Mesto Russia</p>
     </footer>
     <div class="popup">
-      <form class="popup__container">
-        <button class="popup__close"></button>
+      <form class="popup__container" name="popupEdit">
+        <button class="popup__close" type="button" aria-label="Закрыть форму"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <input class="popup__input popup__input_type_name" type="text" value="">
-        <input class="popup__input popup__input_type_description" type="text" value="">
-        <button class="popup__save">Сохранить</button>
+        <input class="popup__input popup__input_type_name" type="text" value="" name="nameProfile">
+        <input class="popup__input popup__input_type_description" type="text" value="" name="descriptionProfile">
+        <button class="popup__save" type="submit" aria-label="Сохранить введенные данные">Сохранить</button>
       </form>
     </div>
   </div>
-  <script src="index.js"></script>
+  <script src="./scripts/index.js"></script>
 </body>
 </html>
 
