--- a/index.html
+++ b/index.html
@@ -24,54 +24,12 @@
         <button class="profile__add" type="button" aria-label="Добавить карточку"></button>
       </section>
       <section class="cards">
-        <article class="card">
-          <img class="card__image" src="./images/Karachaevsk.jpg" alt="Карачаевск">
-          <div class="card__inscription">
-            <h2 class="card__title">Карачаевск</h2>
-            <button class="card__like" type="button" aria-label="Поставить лайк"></button>
-          </div>
-        </article>
-        <article class="card">
-          <img class="card__image" src="./images/Elbrus.jpg" alt="Вид на гору Эльбрус">
-          <div class="card__inscription">
-            <h2 class="card__title">Гора Эльбрус</h2>
-            <button class="card__like" type="button" aria-label="Поставить лайк"></button>
-          </div>
-        </article>
-        <article class="card">
-          <img class="card__image" src="./images/Dombay.jpg" alt="Фотография гор">
-          <div class="card__inscription">
-            <h2 class="card__title">Домбай</h2>
-            <button class="card__like" type="button" aria-label="Поставить лайк"></button>
-          </div>
-        </article>
-        <article class="card">
-          <img class="card__image" src="./images/Altai.jpg" alt="Фотография леса и гор">
-          <div class="card__inscription">
-            <h2 class="card__title">Алтай</h2>
-            <button class="card__like" type="button" aria-label="Поставить лайк"></button>
-          </div>
-        </article>
-        <article class="card">
-          <img class="card__image" src="./images/Baikal.jpg" alt="Вид на озеро Байкал">
-          <div class="card__inscription">
-            <h2 class="card__title">Озеро Байкал</h2>
-            <button class="card__like" type="button" aria-label="Поставить лайк"></button>
-          </div>
-        </article>
-        <article class="card">
-          <img class="card__image" src="./images/Crimea.jpg" alt="Фотографии постройки в Крыму">
-          <div class="card__inscription">
-            <h2 class="card__title">Крым</h2>
-            <button class="card__like" type="button" aria-label="Поставить лайк"></button>
-          </div>
-        </article>
       </section>
     </main>
     <footer class="footer">
       <p class="footer__text">&copy; 2020 Mesto Russia</p>
     </footer>
-    <div class="popup">
+    <div class="popup popup_type_edit">
       <form class="popup__container" name="popupEdit">
         <button class="popup__close" type="button" aria-label="Закрыть форму"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
@@ -80,7 +38,33 @@
         <button class="popup__save" type="submit" aria-label="Сохранить введенные данные">Сохранить</button>
       </form>
     </div>
+    <div class="popup popup_type_create">
+      <form class="popup__container" name="popupAdd">
+        <button class="popup__close" type="button" aria-label="Закрыть форму"></button>
+        <h2 class="popup__title">Новое место</h2>
+        <input class="popup__input popup__input_type_title" type="text" value="" name="titleImage" placeholder="Название">
+        <input class="popup__input popup__input_type_link" type="text" value="" name="linkImage" placeholder="Ссылка на картинку">
+        <button class="popup__save" type="submit" aria-label="Создать карточку">Создать</button>
+      </form>
+    </div>
+    <div class="popup popup_type_view">
+      <figure class="popup__figure">
+        <button class="popup__close" type="button" aria-label="Закрыть форму"></button>
+        <img class="popup__image" src="" alt="">
+        <figcaption class="popup__caption"></figcaption>
+      </figure>
+    </div>
   </div>
+  <template id="cards">
+    <article class="card">
+      <img class="card__image" src="" alt="">
+      <button class="card__delete" type="button" aria-label="Удалить карточку"></button>
+      <div class="card__inscription">
+        <h2 class="card__title"></h2>
+        <button class="card__like" type="button" aria-label="Поставить лайк"></button>
+      </div>
+    </article>
+  </template>
   <script src="./scripts/index.js"></script>
 </body>
 </html>
