--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
     <div class="popup popup_type_view">
       <figure class="popup__figure">
         <button class="popup__close" type="button" aria-label="Закрыть форму"></button>
-        <img class="popup__image" src="" alt="">
+        <img class="popup__image" src="#" alt="">
         <figcaption class="popup__caption"></figcaption>
       </figure>
     </div>
   </div>
   <template id="cards">
     <article class="card">
-      <img class="card__image" src="" alt="">
+      <img class="card__image" src="#" alt="">
       <button class="card__delete" type="button" aria-label="Удалить карточку"></button>
       <div class="card__inscription">
         <h2 class="card__title"></h2>
