--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       <form class="popup__container" name="popupEdit">
         <button class="popup__close" type="button" aria-label="Закрыть форму"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <input class="popup__input popup__input_type_name" type="text" value="" name="nameProfile">
-        <input class="popup__input popup__input_type_description" type="text" value="" name="descriptionProfile">
+        <input class="popup__input popup__input_type_name" type="text" value="" name="nameProfile" placeholder="Имя">
+        <input class="popup__input popup__input_type_description" type="text" value="" name="descriptionProfile" placeholder="Вид деятельности">
         <button class="popup__save" type="submit" aria-label="Сохранить введенные данные">Сохранить</button>
       </form>
     </div>
@@ -65,6 +65,7 @@
       </div>
     </article>
   </template>
+  <script src="./scripts/constants.js"></script>
   <script src="./scripts/index.js"></script>
 </body>
 </html>
