--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </section>
     </main>
     <footer class="footer">
-      <p class="footer__text">&copy; 2020 Mesto Russia</p>
+      <p class="footer__text">&copy; 2022 Mesto Russia</p>
     </footer>
     <div class="popup popup_type_edit">
       <form class="popup__form" name="popupEdit" novalidate>
@@ -59,7 +59,7 @@
         <button class="popup__button" type="submit" aria-label="Создать карточку">Создать</button>
       </form>
     </div>
-    <div class="popup popup_type_view">
+    <div class="popup popup_blackout popup_type_view">
       <figure class="popup__figure">
         <button class="popup__close" type="button" aria-label="Закрыть форму"></button>
         <img class="popup__image" src="#" alt="">
