--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
         <button class="popup__close" type="button" aria-label="Закрыть форму"></button>
         <h2 class="popup__title">Новое место</h2>
         <label class="popup__label">
-          <input class="popup__input popup__input_type_title" type="text" value="" name="titleImage" id="titleImage" placeholder="Название" minlength="2" maxlength="30" required>
+          <input class="popup__input popup__input_type_title" type="text" value="" name="name" id="titleImage" placeholder="Название" minlength="2" maxlength="30" required>
           <span class="titleImage-error popup__input-error"></span>
         </label>
         <label class="popup__label">
-          <input class="popup__input popup__input_type_link" type="url" value="" name="linkImage" id="linkImage" placeholder="Ссылка на картинку" required>
+          <input class="popup__input popup__input_type_link" type="url" value="" name="link" id="linkImage" placeholder="Ссылка на картинку" required>
           <span class="linkImage-error popup__input-error"></span>
         </label>
         <button class="popup__button" type="submit" aria-label="Создать карточку">Создать</button>
