8пр все работает

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         <button class="popup__close" type="button" aria-label="Закрыть форму"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
       <label class="popup__label">
-        <input class="popup__input popup__input_type_name" type="text" value="" name="nameProfile" id="nameProfile" placeholder="Имя" minlength="2" maxlength="40" required>
+        <input class="popup__input popup__input_type_name" type="text" value="" name="inputNameProfile" id="nameProfile" placeholder="Имя" minlength="2" maxlength="40" required>
         <span class="nameProfile-error popup__input-error"></span>
       </label>
       <label class="popup__label">
-        <input class="popup__input popup__input_type_description" type="text" value="" name="descriptionProfile" id="descriptionProfile" placeholder="Вид деятельности" minlength="2" maxlength="200" required>
+        <input class="popup__input popup__input_type_description" type="text" value="" name="inputDescriptionProfile" id="descriptionProfile" placeholder="Вид деятельности" minlength="2" maxlength="200" required>
         <span class="descriptionProfile-error popup__input-error"></span>
       </label>
         <button class="popup__button" type="submit" aria-label="Сохранить введенные данные">Сохранить</button>
