--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Место</title>
-  <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body class="page">
   <div class="page__container">
     <header class="header">
-      <img class="header__logo" src="./images/logo.svg" alt="Логотип Место">
+      <img class="header__logo" src="<%=require('./images/logo.svg')%>" alt="Логотип Место">
     </header>
     <main class="content">
       <section class="profile">
-        <img class="profile__avatar" src="./images/avatar.jpg" alt="Фото пользователя">
+        <img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="Фото пользователя">
         <div class="profile__info">
           <div class="profile__fullname">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -77,7 +76,6 @@
       </div>
     </article>
   </template>
-  <script type="module" src="./scripts/index.js"></script>
 </body>
 </html>
 
